Fixed squished text, added inverted colours

--- a/Client/Pages/Index.razor.css
+++ b/Client/Pages/Index.razor.css
@@ -42,20 +42,10 @@
     color: #0b5ed7;
 }
 
-.button-design-dark-selected {
-    padding: 10px 20px 10px 20px;
-    margin: 10px 10px 10px 10px;
-    font-family: Lexend, monospace;
-    border-radius: 15%;
-    box-shadow: 5px 10px #50A3BF;
-    background-color: #0b5ed7;
-    color: #ffffff;
-}
 .box{
     background: linear-gradient(to bottom, #f0f0f0 0%, #f0f0f0 100%);
     padding-top: 40px;
     margin-right: 300px;
     padding-bottom: 500px;
     margin-left: 300px;
-    
 }
